增加混合逻辑时钟实现，为多版本数据生成版本号